# ktv-mux

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: deep-research-ktv-mux.md
docs/: ACCEPTANCE.md  ARCHITECTURE.md  IMPROVEMENTS.md  INSTALL.md  ROADMAP.md  SAMPLE_WORKFLOW.md  START_HERE.md  TROUBLESHOOTING.md  USAGE.md
scripts/: bootstrap_mac.sh  install_macos_launcher.sh  ktv-start.command  smoke_e2e.sh
src/ktv_mux/: __init__.py  alignment.py  ass.py  checkpoints.py  cli.py  commands.py  compatibility.py  diagnostics.py  errors.py  exporter.py  jobs.py  jsonio.py  library.py  lyrics.py  media.py  models.py  mux_plan.py  output_templates.py  paths.py  pipeline.py  pipeline_support.py  planner.py  preflight.py  progress.py  quality.py  recipes.py  separation_presets.py  settings.py  storage.py  track_roles.py  versions.py  view_admin.py  view_common.py  view_song.py  views.py  waveform.py  web.py
src/ktv_mux/static/: app.js  style.css
src/ktv_mux/templates/: base.html
tests/: test_browser_playwright.py  test_cli.py  test_diagnostics.py  test_integration_ffmpeg.py  test_jobs.py  test_library.py  test_media_commands.py  test_paths_lyrics_ass.py  test_preflight.py  test_progress.py  test_quality.py  test_separation_presets.py  test_settings_planner_exporter.py  test_slow_demucs.py  test_track_roles_mux_plan.py  test_versions.py  test_waveform.py  test_web.py
