[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ktv-mux"
version = "0.1.0"
description = "Local-first KTV MKV production pipeline"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ktv-mux contributors" }]
dependencies = []

[project.optional-dependencies]
web = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
]
separation = [
  "demucs>=4.0.1",
  "torchcodec>=0.8.0",
]
alignment = [
  "funasr>=1.2.0",
]
ml = [
  "demucs>=4.0.1",
  "torchcodec>=0.8.0",
  "funasr>=1.2.0",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.8",
]
browser = [
  "playwright>=1.45",
]

[project.scripts]
ktv = "ktv_mux.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ktv_mux = ["static/*.css", "static/*.js", "templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires ffmpeg/ffprobe and bundled media assets",
  "slow: requires heavyweight ML models or network downloads",
  "browser: requires Playwright browser dependencies",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]
